# mcp-payloadcms-rs

./: .dockerignore  .gitignore copy  Cargo.toml  Dockerfile  README.MD  README.md  build.rs  rust-toolchain.toml  settings.json
.github/: copilot-instructions.md
docs/: instructions.md  tool-instructions.md
src/: cli.rs  error.rs  handler.rs  lib.rs  macros.rs  main.rs  metadata.rs  payload.rs  prompts.rs  server.rs  storage.rs  types.rs
src/docs/: instructions.md
src/payload_tools/: client.rs  generator.rs  index.rs  mcp.rs  mod.rs  query.rs  scaffolder.rs  sql.rs  types.rs  validator.rs
src/tools/: echo.rs  generator.rs  health.rs  index.rs  mod.rs  query.rs  scaffolder.rs  types.rs
src_old/: cli.rs  error.rs  handler.rs  handler.rs.bak  lib.rs  main.rs  server.rs
src_old/tools/: index.rs  mcp.rs  query.rs  scaffolder.rs  schemas.rs  sql.rs  validator.rs
