[package]
name = "mcp-payloadcms-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.9.0", features = ["server", "macros", "transport-streamable-http-server", "transport-worker", "transport-sse-server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
ulid = "1.2"
regex = "1.11"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = "0.7"
hyper = { version = "0.14", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
tempfile = "3.6"
clap = { version = "4", features = ["derive"] }