[package]
name = "mcp-payloadcms-rs"
version = "0.1.0"
edition = "2024"
description = "MCP server for Payload CMS"
license = "MIT"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "transport-sse-server",
    "transport-io",
] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
schemars = "*"
futures = "*"
hyper = { version = "*", features = ["full"] }
hyper-util = { version = "*", features = ["server", "tokio", "http1", "http2", "service"] }
tokio-util = "*"
tokio-tungstenite = "*"
pin-project-lite = "*"
colored = "*"
dialoguer = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["fmt", "env-filter", "std"] }
thiserror = "*"
clap = { version = "*", features = ["cargo", "derive", "env", "string", "wrap_help", "debug", "deprecated"] }
sysinfo = "*"

# Payload CMS specific
ulid = "1.2"
regex = "1.12"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[features]
default = []

[build-dependencies]
toml = "*"