[package]
name = "mcp-payloadcms-rs"
version = "0.1.0"
edition = "2024"
description = "MCP server for Payload CMS"
license = "MIT"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "transport-sse-server",
    "transport-io",
] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
schemars = "1.1.0"
futures = "0.3.31"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["server", "tokio", "http1", "http2", "service"] }
tokio-util = "0.7.17"
tokio-tungstenite = "0.28.0"
pin-project-lite = "0.2.16"
colored = "3.0.0"
dialoguer = "0.12.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter", "std"] }
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["cargo", "derive", "env", "string", "wrap_help", "debug", "deprecated"] }
sysinfo = "0.37.2"
ureq = { version = "2.9", features = ["json"] }

# Payload CMS specific
ulid = "1.2.1"
regex = "1.12.2"
dirs = "5.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"

[features]
default = []

[build-dependencies]
toml = "0.9.8"
